[gd_scene load_steps=5 format=3 uid="uid://bjto66eav1ln0"]

[ext_resource type="Script" path="res://scripts/CanvasLayer.gd" id="1_p4sxa"]
[ext_resource type="FontFile" uid="uid://dsa0wwoxagbr" path="res://brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="2_6civr"]
[ext_resource type="Texture2D" uid="uid://b5n2ep7od2ohw" path="res://images/dasZlatyKupon.png" id="3_5hn3e"]

[sub_resource type="GDScript" id="GDScript_ochpy"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_p4sxa")

[node name="CoinCount" type="Label" parent="."]
offset_left = 27.0
offset_top = 108.0
offset_right = 179.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Coins:

"

[node name="TimerLabel" type="Label" parent="."]
offset_left = 27.0
offset_top = 19.0
offset_right = 307.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Time: 00:00

"

[node name="LiveCounter" type="Label" parent="."]
offset_left = 28.0
offset_top = 152.0
offset_right = 308.0
offset_bottom = 219.0
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Lives: 0

"

[node name="Náboje" type="Label" parent="."]
visible = false
offset_left = 31.0
offset_top = 245.0
offset_right = 311.0
offset_bottom = 312.0
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Náboje: 5

"

[node name="Mode" type="Label" parent="."]
offset_left = 26.0
offset_top = 61.0
offset_right = 306.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Mode: 

"

[node name="Zabito nepřátel" type="Label" parent="."]
offset_left = 29.0
offset_top = 200.0
offset_right = 477.0
offset_bottom = 267.0
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Zabito nepřátel: 0
"

[node name="Nasbíráno hub" type="Label" parent="."]
visible = false
offset_left = 32.0
offset_top = 295.0
offset_right = 516.0
offset_bottom = 362.0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_6civr")
theme_override_font_sizes/font_size = 32
text = "Nasbíráno hub: 0/10
"

[node name="GameTimer" type="Timer" parent="."]
script = SubResource("GDScript_ochpy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1749, 163)
scale = Vector2(5.89, 5.89)
texture = ExtResource("3_5hn3e")
